Wed Dec  2 18:17:04 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * NEWS:

          Added entry for member validation feature in LoadBalancer. 

Wed Dec  2 13:46:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>

        * debianbuild/{all files containign version numbers}:
          Updated to latest micro release.

Wed Dec  2 13:30:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>

        * bin/make_release.py:
          Added code to update version numbers in ACE_ROOT/debianbuild files
          on release.
          Changed to retrieve repo root by default from info of working copy.

Wed Dec  2 07:51:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/copy-script.sh:
          Also copy md5 files

        * bin/MakeProjectCreator/config/bmake.features:
          Enable mcpp for bmake

Thu Nov 26 02:08:59 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * Gaurav Kulshreshtha is the 2300th contributor to ACE+TAO+CIAO!

Mon Nov 30 19:11:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/gperf/src/Bool_Array.h:
        * apps/gperf/src/Key_List.h:
          C++ Builder 2010 fixes

Mon Nov 30 14:02:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Process.cpp:
        * ace/Process.h:
          Fixed gcc warnings

Mon Nov 30 12:38:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-borland.h:
          Started port to C++ Builder 2010, older versions of C++ Builder are
          now deprecated

        * ace/MMAP_Memory_Pool.cpp:
          Layout change

        * ace/OS_NS_sys_time.h:
        * ace/OS_NS_sys_time.inl:
          Removed workarounds for ancient wince versions

        * ace/Process.cpp:
        * ace/Process.h:
          Use bool and size_t and removed some ugly casts

        * ace/Trace.cpp:
        * ace/Trace.h:
          Use bool

Mon Nov 30 10:53:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
